--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="home-left">
                         <div class="home-left-text">
                             <h2 class="sub-title">Hello world! I'm marzsam and I like to</h2>
-                            <h1 class="title">> MAKE CODE░</h1>
+                            <h1 class="title">> MAKE CODE</h1>
                             <h3 class="sub-sub-title">junior backend developer and computer engineer</h3>
                             <ul class="language-list">
                                 <li class="language-item">java</li>
